Improved force sketch and separate playground

--- a/io/index.html
+++ b/io/index.html
@@ -39,8 +39,7 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/drv2605"></a>
-            <a href="./espruino/drv2605/">drv2605</a>: haptic motor controller (Espruino Pico). See also the <a
-              href="../../playgrounds/io/espruino-drv2605/">DRV2605 playground</a>.
+            <a href="./espruino/drv2605/">drv2605</a>: haptic motor controller (Espruino Pico).
           </li>
         </ul>
         <h2>playgrounds</h2>
@@ -74,7 +73,7 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force"></a>
-            <a href="./pointer/force/">force</a>: pressure/force
+            <a href="./pointer/force/">force</a>: Trackpad/stylus pressure
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise"></a>
@@ -86,6 +85,7 @@
           <li><a href="../playgrounds/io/pointer/">pointer</a>: Pointer events</li>
           <li><a href="../playgrounds/io/pointer-gesture/">gesture</a>: Touch gestures</li>
           <li><a href="../playgrounds/io/pointer-pen/">pointer-pen</a>: Pen pointer events</li>
+          <li><a href="../playgrounds/io/force/">force</a>: Trackpad/stylus pressure</li>
         </ul>
       </div>
       <div>
