--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -23,22 +23,25 @@
 
         <ul class="nobullets">
           <li>
-            <a href="./io/keys">keys</a>: Key events
+            <a href="./io/keys/">keys</a>: Key events
           </li>
           <li>
-            <a href="./io/pointer">pointer</a>: Pointer events
+            <a href="./io/pointer/">pointer</a>: Pointer events
           </li>
           <li>
-            <a href="./io/pointer-pen">pointer-pen</a>: Pen pointer events (stylus input required)
+            <a href="./io/pointer-pen/">pointer-pen</a>: Pen pointer events (stylus input required)
           </li>
           <li>
-            <a href="./io/pointer-gesture">pointer-gesture</a>: Touch gestures (touch input required)
+            <a href="./io/pointer-gesture/">pointer-gesture</a>: Touch gestures (touch input required)
           </li>
           <li>
-            <a href="./io/espruino-repl">espruino-repl</a>: Run lines of code on an Espruino
+            <a href="./io/force/">force</a>: Force/pressure data from Apple trackpads (when using Safari) or stylus
           </li>
           <li>
-            <a href="./io/espruino-plot">espruino-plot</a>: Plot data from Espruino
+            <a href="./io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino
+          </li>
+          <li>
+            <a href="./io/espruino-plot/">espruino-plot</a>: Plot data from Espruino
           </li>
           <li><a href="./io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
         </ul>
