--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
         </ul>
       </div>
       <div>
-        <h2>machine learning</h2>
-        <ul class="nobullets">
-          <li> / <a href="./ml/vision/">computer vision</a></li>
-        </ul>
+        <h2><a href="./ml/">machine learning</a></h2>
+
       </div>
       <div>
         <h2>etc</h2>
