--- a/ml/index.html
+++ b/ml/index.html
@@ -12,12 +12,12 @@
 
   <main>
     <header>
-      <a href="../../">../</a> <a href="../">machine learning</a> / vision
+      <a href="../../">../</a> machine learning
     </header>
     <section>
       <p>TensorFlow.js for computer vision.</p>
       <ul class="pillbox">
-        <li><a class="pill" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/README.md">README</a></li>
+        <li><a class="pill" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/README.md">README</a></li>
       </ul>
     </section>
     <div class="demos">
@@ -25,8 +25,8 @@
         <h1>objects</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/object/objects.html"></a>
-            <a class="readme" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/object/README.md"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/object/objects.html"></a>
+            <a class="readme" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/object/README.md"></a>
             <a href="./object/objects.html">objects</a>: Detect around 90 common objects using the COCO-SSD
             model.
           </li>
@@ -36,35 +36,34 @@
         <h1>pose</h1>
         <p>Detect key points of the human body.</p>
         <ul class="pillbox">
-          <li><a class="pill" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/pose/README.md">README</a>
+          <li><a class="pill" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/pose/README.md">README</a>
           </li>
         </ul>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/points.js"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/points.js"></a>
             <a href="./pose/points.html">points</a>: demonstrates working with normalised key points, smoothing them and
             visualising on a canvas.
           </li>
           <li>
             <a class="source"
-              href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/points-multiple-sources.js"></a>
+              href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/points-multiple-sources.js"></a>
             <a href="./pose/points-multiple-sources.html">points-multiple-sources</a>: an extension of the
             <em>points</em> demo,
             showing how to handle data from several sources.
           </li>
           <li>
-            <a class="source"
-              href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/point-to-point.js"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/point-to-point.js"></a>
             <a href="./pose/point-to-point.html">point-to-point</a>: demonstrates calculating geometric
             relation between two parts of the body
           </li>
           <!-- <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/area.js"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/area.js"></a>
             <a href="./pose/area.html">area</a>: demonstrates calculating some rough areas based on body
             parts.
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/depth.js"></a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/depth.js"></a>
             <a href="./pose/depth.html">depth</a>: uses 3D position of points
           </li> -->
         </ul>
