--- a/modulation/index.html
+++ b/modulation/index.html
@@ -49,7 +49,19 @@
           </li>
         </ul>
         <ul class="nobullets">
+          <li><a href="./oscillator-spring/">oscillator-spring</a>: Spring physics</li>
           <li><a href="./oscillator-starter/">oscillator-starter</a>: Starter</li>
+        </ul>
+      </div>
+      <div>
+        <h1>forces</h1>
+        <ul class="pillbox">
+          <li><a class="pill" href="https://clinth.github.io/ixfx-docs/modulation/forces/">Documentation</a></li>
+          <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.Forces.html">API Reference</a>
+          </li>
+        </ul>
+        <ul class="nobullets">
+          <li><a href="./forces-basic/">forces-basic</a>: Basic</li>
         </ul>
       </div>
     </div>
