--- a/modulation/index.html
+++ b/modulation/index.html
@@ -61,7 +61,9 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./forces-basic/">forces-basic</a>: Basic</li>
+          <li><a href="./forces-basic/">basic</a>: Gravity, drag, wind, friction</li>
+          <li><a href="./forces-pendulum/">pendulum</a>: Swinging thing</li>
+
         </ul>
       </div>
     </div>
