--- a/modulation/index.html
+++ b/modulation/index.html
@@ -26,7 +26,7 @@
           <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Modulation.html#adsr">API Reference</a></li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./env-decay/">env-decay</a>: Using an envelope to gradually reduce a value</li>
+          <li><a href="./env-decay/">decay</a>: Using an envelope to gradually reduce a value</li>
         </ul>
       </div>
       <div>
@@ -37,8 +37,8 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./easing-tick/">easing-tick</a>: Easing over <em>ticks</em></li>
-          <li><a href="./easing-timer/">easing-timer</a>: Easing over time </li>
+          <li><a href="./easing-tick/">tick</a>: Easing over <em>ticks</em></li>
+          <li><a href="./easing-timer/">timer</a>: Easing over time </li>
         </ul>
       </div>
       <div>
@@ -49,8 +49,8 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./oscillator-spring/">oscillator-spring</a>: Spring physics</li>
-          <li><a href="./oscillator-starter/">oscillator-starter</a>: Starter</li>
+          <li><a href="./oscillator-spring/">spring</a>: Spring physics</li>
+          <li><a href="./oscillator-starter/">starter</a>: Empty sketch to get you going</li>
         </ul>
       </div>
       <div>
@@ -63,7 +63,7 @@
         <ul class="nobullets">
           <li><a href="./forces-basic/">basic</a>: Gravity, drag, wind, friction</li>
           <li><a href="./forces-pendulum/">pendulum</a>: Swinging thing</li>
-
+          <li><a href="./forces-attractor/">attractor</a>: Attraction/orbiting</li>
         </ul>
       </div>
     </div>
