Added geometry/points-relation demo

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -152,6 +152,11 @@
             <a href="./point-centroid-hull/">Centroid and Hull</a>
             <div class="techniques">Centroid of two or more points, as well as enclosing shape</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-relation"></a>
+            <a href="./point-relation/">Relation</a>
+            <div class="techniques">Track relation between two points</div>
+          </li>
         </ul>
       </div>
       <div>
