--- a/modulation/index.html
+++ b/modulation/index.html
@@ -61,9 +61,44 @@
           </li>
         </ul>
         <ul class="nobullets">
-          <li><a href="./forces-basic/">basic</a>: Gravity, drag, wind, friction</li>
-          <li><a href="./forces-pendulum/">pendulum</a>: Swinging thing</li>
-          <li><a href="./forces-attractor/">attractor</a>: Attraction/orbiting</li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-basic"></a>
+            <a href="./forces-basic/">basic</a>: Gravity, drag, wind, friction
+            <div class="techniques">Canvas, particles
+            </div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-pendulum"></a>
+            <a href="./forces-pendulum/">pendulum</a>: Swinging thing
+            <div class="techniques">Canvas
+            </div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-attractor"></a>
+            <a href="./forces-attractor/">attractor</a>: Attraction/orbiting
+            <div class="techniques">Canvas, shapes, particles
+            </div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-target"></a>
+            <a href="./forces-target/">target</a>: Use forces to move to a target position
+            <div class="techniques">DOM, velocity, acceleration, pointer
+            </div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-accel"></a>
+            <a href="./forces-accel/">acceleration</a>: Pointer movement applied as acceleration
+            <div class="techniques">DOM, velocity, acceleration, pointer
+            </div>
+          </li>
+          <li>
+            <a class="source"
+              href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/forces-accel-particles"></a>
+            <a href="./forces-accel-particles/">acceleration (particles)</a>: Extension of acceleration sketch but
+            supporting many particles.
+            <div class="techniques">DOM, velocity, acceleration, particles, pointer
+            </div>
+          </li>
         </ul>
       </div>
     </div>
