--- a/modulation/forces-attractor/index.html
+++ b/modulation/forces-attractor/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>forces / attractor</title>
+  <title>attractor</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     }
   </style>
   <section>
-    <h1>forces / attractor</h1>
+    <h1>attractor</h1>
     <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
   </section>
