--- a/io/index.html
+++ b/io/index.html
@@ -54,6 +54,10 @@
         <p>These demos use Web Serial, sending JSON back and forth to an Arduino sketch.
         <ul class="nobullets">
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/switch"></a>
+            <a href="./arduino/switch/">switch</a>: read data from a switch (or any other digital input)
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/arduino/joystick"></a>
             <a href="./arduino/joystick/">joystick</a>: read data from a joystick module
           </li>
