Removed temporal category in favour for 'data'

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <div>
         <h2>modules</h2>
         <ul class="nobullets">
+          <li> / <a href="./data/">data</a></li>
+
           <li> / <a href="./dom/">dom</a></li>
           <li> / <a href="./geometry/">geometry</a></li>
           <li> / <a href="./io/">input output</a></li>
           <li> / <a href="./modulation/">modulation</a></li>
           <li> / <a href="./flow/">flow</a></li>
-          <li> / <a href="./temporal/">temporal</a></li>
         </ul>
       </div>
 
