Added point-tracker playground

--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -20,10 +20,20 @@
         </p>
       </div>
       <div>
+        <h2>data</h2>
+        <ul class="nobullets">
+          <li>
+            <a href="./data/point-tracker/">point-tracker</a>
+          </li>
+        </ul>
 
+        <h2>io</h2>
         <ul class="nobullets">
           <li>
             <a href="./io/keys/">keys</a>: Key events
+          </li>
+          <li>
+            <a href="./io/point-tracker/">keys</a>: Key events
           </li>
           <li>
             <a href="./io/pointer/">pointer</a>: Pointer events
