--- a/io/index.html
+++ b/io/index.html
@@ -49,6 +49,7 @@
           <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
         </ul>
       </div>
+
       <div>
         <h1>arduino</h1>
         <p>These demos use Web Serial, sending JSON back and forth to an Arduino sketch.
@@ -74,6 +75,7 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/scale"></a>
             <a href="./pointer/scale/">scale</a>: pinch-to-zoom gesture
+            <div class="techniques">Points tracker</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force"></a>
@@ -95,6 +97,10 @@
       <div>
         <h1>keyboard</h1>
         <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/key"></a>
+            <a href="./keyboard/key/">key</a>: track the state of a key
+          </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
             <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
