--- a/io/pointer/visualise/index.html
+++ b/io/pointer/visualise/index.html
@@ -31,7 +31,7 @@
     }
   </style>
   <h1>pointer visualise</h1>
-  <p>Demonstrate the pointer visualiser</p>
+  <p>Demonstrate the pointer visualiser. Most useful with a touch screen.</p>
 </body>
 
 </html>
