--- a/ml/index.html
+++ b/ml/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx / machine learn</title>
-  <link rel="stylesheet" href="../../demos.css">
+  <link rel="stylesheet" href="../demos.css">
 </head>
 
 <body>
