ml demo improvements

--- a/ml/index.html
+++ b/ml/index.html
@@ -32,6 +32,18 @@
           </li>
         </ul>
       </div>
+
+      <div>
+        <h1>face</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/face/single.html"></a>
+            <a class="readme" href="https://github.com/ClintH/ixfx-demos/blob/main/ml/face/README.md"></a>
+            <a href="./face/single.html">single</a>: Detect and smooth key points for a single face.
+          </li>
+        </ul>
+      </div>
+
       <div>
         <h1>pose</h1>
         <p>Detect key points of the human body.</p>
@@ -41,20 +53,19 @@
         </ul>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/points.js"></a>
-            <a href="./pose/points.html">points</a>: demonstrates working with normalised key points, smoothing them and
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/single.js"></a>
+            <a href="./pose/single.html">single</a>: demonstrates working with normalised key points, smoothing them and
             visualising on a canvas.
           </li>
           <li>
-            <a class="source"
-              href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/points-multiple-sources.js"></a>
-            <a href="./pose/points-multiple-sources.html">points-multiple-sources</a>: an extension of the
-            <em>points</em> demo,
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/multiple.js"></a>
+            <a href="./pose/multiple.html">multiple</a>: an extension of the
+            <em>single</em> demo,
             showing how to handle data from several sources.
           </li>
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/point-to-point.js"></a>
-            <a href="./pose/point-to-point.html">point-to-point</a>: demonstrates calculating geometric
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/pose/geometry.js"></a>
+            <a href="./pose/geometry.html">geometry</a>: demonstrates calculating geometric
             relation between two parts of the body
           </li>
           <!-- <li>
