--- a/ml/object/objects.html
+++ b/ml/object/objects.html
@@ -44,19 +44,24 @@
     height: 100%;
     border: none;
   }
+
+  #intro {
+    max-width: 15em;
+  }
 </style>
 
 <body>
-  <h1>object / objects</h1>
-  <p>This demo shows consuming and visualising object-detection data.</p>
-  <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
-      window</a>, or click the yellow checkmark in the corner panel.</p>
-
-  <section id="sourceSection">
-    <iframe src="source.html"></iframe>
-  </section>
-  <script type="module" src="objects.js"></script>
-  <canvas id="canvas"></canvas>
+  <section id="intro">
+    <h1>object / objects</h1>
+    <p>This demo shows consuming and visualising object-detection data.</p>
+    <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
+        window</a>, or click the yellow checkmark in the corner panel.</p>
+    </div>
+    <section id="sourceSection">
+      <iframe src="source.html"></iframe>
+    </section>
+    <script type="module" src="objects.js"></script>
+    <canvas id="canvas"></canvas>
 </body>
 
 </html>
