--- a/ml/pose/multiple.html
+++ b/ml/pose/multiple.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pose / points</title>
+  <title>pose / multiple</title>
 </head>
 <style>
   :root {
@@ -44,26 +44,31 @@
     height: 100%;
     border: none;
   }
+
+  #intro {
+    max-width: 15em;
+  }
 </style>
 
 <body>
-  <h1>pose / points</h1>
-  <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
-      window</a>, or click the yellow tick in the corner panel.</p>
-  <p>This demonstrates using a single pose, mapping relative key points to screen coordinates, interpolating for reduce
-    glitchiness and drawing on the canvas. See <a href="points-multiple-sources.html">points-multiple-sources</a> for
-    handling
-    multiple sources.
-  </p>
+  <section id="intro">
+    <h1>pose / multiple</h1>
+    <p id="intro"> <a href="source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning" target="_blank">Start a
+        source
+        in a new
+        window</a>, or click the yellow tick in the corner panel.</p>
+    <p>An extension of <a href="single.html">single</a>, but tracks multiple poses from multiple sources.
+    </p>
+  </section>
 
   <!-- If you're not using the panel, comment-out these lines... -->
-  <button id="btnCloseFrame">Close corner source</button>
+  <button id="btnCloseFrame">Stop corner source</button>
   <section id="sourceSection">
-    <iframe src="source.html"></iframe>
+    <iframe src="source.html?model=MoveNet&moveNetModelType=MultiPose.Lightning"></iframe>
   </section>
   <!-- ----  -->
 
-  <script type="module" src="points.js"></script>
+  <script type="module" src="multiple.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
