--- a/io/index.html
+++ b/io/index.html
@@ -29,6 +29,11 @@
         <h1>espruino</h1>
         <ul class="nobullets">
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/button"></a>
+            <a href="./espruino/button/">button</a>: respond to button press (Espruino
+            Puck)
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/accel-gyro"></a>
             <a href="./espruino/accel-gyro/">accel-gyro</a>: use acceleration and gyroscope sensor readings (Espruino
             Puck)
