--- a/io/index.html
+++ b/io/index.html
@@ -30,17 +30,19 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/button"></a>
-            <a href="./espruino/button/">button</a>: respond to button press (Espruino
-            Puck)
+            <a href="./espruino/button/">button</a>: respond to button press (Puck.js)
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/led"></a>
+            <a href="./espruino/led/">led</a>: Control the three on-board LEDs (Puck.js)
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/accel-gyro"></a>
-            <a href="./espruino/accel-gyro/">accel-gyro</a>: use acceleration and gyroscope sensor readings (Espruino
-            Puck)
+            <a href="./espruino/accel-gyro/">accel-gyro</a>: use acceleration and gyroscope sensor readings (Puck.js)
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/temperature"></a>
-            <a href="./espruino/temperature/">temperature</a>: use temperature sensor readings (Espruino Puck)
+            <a href="./espruino/temperature/">temperature</a>: use temperature sensor readings (Puck.js)
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/drv2605"></a>
