--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -25,8 +25,14 @@
           <li>
             <a href="./data/point-tracker/">point-tracker</a>
           </li>
-        </ul>
 
+        </ul>
+        <h2>modulation</h2>
+        <ul class="nobullets">
+          <li>
+            <a href="./modulation/plot/">plot</a>: plot values
+          </li>
+        </ul>
         <h2>io</h2>
         <ul class="nobullets">
           <li>
