--- a/starters/canvas/index.html
+++ b/starters/canvas/index.html
@@ -9,14 +9,12 @@
 
 <body>
   <style>
-    html {
-      box-sizing: border-box;
-    }
-
     *,
     *:before,
-    *:after {
-      box-sizing: inherit;
+    *:after,
+    html,
+    body {
+      box-sizing: border-box;
     }
 
     :root {
