Added audio/stereo-pan and audio/filter sketches

--- a/audio/index.html
+++ b/audio/index.html
@@ -19,6 +19,22 @@
     </ul>
     <div class="demos">
       <div>
+        <h1>playback</h1>
+        <p></p>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/stereo-pan"></a>
+            <a href="../audio/stereo-pan/">stereo-pan</a>: Panning audio on a left-to-right spectrum.
+            <div class="techniques">StereoPannerNode, oscillators</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/filter"></a>
+            <a href="../audio/filter/">filter</a>: Biquad filter
+            <div class="techniques">BiquadFilterNode, oscillators</div>
+          </li>
+        </ul>
+      </div>
+      <div>
         <h1>audio processing</h1>
         <p></p>
         <ul class="nobullets">
