--- a/starters/barebones/index.html
+++ b/starters/barebones/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Canvas drawing loop starter</title>
+  <title>barebones</title>
 </head>
 
 <body>
@@ -31,8 +31,7 @@
     }
   </style>
   <section>
-    <h1>Canvas drawing loop starter</h1>
-    <canvas id="canvas"></canvas>
+    <h1>barebones</h1>
     <script type="module" src="script.js"></script>
   </section>
 </body>
