--- a/geometry/point-relation/index.html
+++ b/geometry/point-relation/index.html
@@ -40,6 +40,7 @@
       -webkit-user-select: none;
       overscroll-behavior: none;
       margin: 0;
+      touch-action: none;
       overflow: hidden;
     }
 
@@ -73,7 +74,7 @@
   <section>
     <div id="info">
       Distance relative: <span id="lblDistance">?</span><br />
-      Angle deg: <span id="lblAngleDeg">?</span><br />
+      Angle degrees: <span id="lblAngleDeg">?</span><br />
       Centroid: <span id="lblCentroid">?</span><br />
       Average: <span id="lblAverage">?</span><br />
       Speed: <span id="lblSpeed">?</span><br />
