--- a/geometry/point-drawing/index.html
+++ b/geometry/point-drawing/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>point-drawing</title>
 </head>
 
@@ -18,6 +18,11 @@
     body {
       font-family: var(--font);
       background-color: var(--bg);
+      overflow: hidden;
+      touch-action: none;
+      user-select: none;
+      -webkit-user-select: none;
+      overscroll-behavior: none;
     }
 
     h1 {
