--- a/geometry/point-interpolate/index.html
+++ b/geometry/point-interpolate/index.html
@@ -22,6 +22,8 @@
       overflow: hidden;
       font-family: var(--font);
       color: var(--fg);
+      user-select: none;
+      -webkit-user-select: none;
     }
 
     #thing {
