--- a/modulation/forces-basic/index.html
+++ b/modulation/forces-basic/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>basic forces</title>
 </head>
 
@@ -19,7 +19,9 @@
       font-family: var(--font);
       user-select: none;
       -webkit-user-select: none;
-      overscroll-behavior: contain;
+      overscroll-behavior: none;
+      overflow: hidden;
+      touch-action: none;
     }
 
     h1 {
