--- a/modulation/forces-accel/index.html
+++ b/modulation/forces-accel/index.html
@@ -45,7 +45,7 @@
     }
   </style>
   <section>
-    <h1>acceleration</h1>
+    <h1>forces-acceleration</h1>
     <p>Demonstrates applying acceleration. Click and drag pointer to change velocity.</p>
     <div title="Current velocity" id="velocity"></div>
     <div id="thing">Hello</div>
